--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
   <!-- ========================================= -->
 
   <audio autoplay loop id="bg-music">
-    <source src="bg.mp3" type="audio/mpeg" />
+    <source src="https://drive.google.com/file/d/1zF2VHfobz1-y_bfGAdymRmtPt2cFXrZU/view?usp=sharing" type="audio/mpeg" />
   </audio>
 
 
