--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@
         { q: "Trung bình Minh làm gì mất 10s?", a: _e("giải rubik") }
       ],
       "crush": [
-        { q: "Minh thích ai?", a: _e("không có") }
+        { q: "Minh thích ai?", a: _e("m5 đáng ghét :))") }
       ]
     };
 
