--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
   <meta name="theme-color" content="#8B0000" />
-  <title>Mini Game Mùng 2 - Đớp Lì Xì của Minh</title>
+  <title>Mini Game Mùng 2 - Đớp Lì Xì của Minh - Đã hết hạn </title>
   <meta name="description" content="Trò chơi Tết 2026 - Trả lời câu đố để nhận lì xì từ Minh!" />
 
   <!-- Tailwind CSS CDN -->
